# orkid

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .style.yapf  .sublime-project  CMakeLists.txt  README.md  azure-pipelines.yml  build.py  changes  contrib.md  do_assets.py  extcmd.py  license-mit.txt  makefile  ork.build.ini  orkid.cmake  orkid.code-workspace  root.sconstruct  setup.py
ork.core/: CMakeLists.txt  makefile  ork.build.manifest  ork.core.sconstruct
ork.core/doc/: doxyfile
ork.core/examples/: CMakeLists.txt
ork.core/examples/fileio/: main.cpp
ork.core/examples/orkpyshell/: CMakeLists.txt  build.py  main.cpp
ork.core/examples/python/: math.py  orkmath.py
ork.core/inc/ork/: orkai.h  orkconfig.h  orkkernel.h  orkmath.h  orkprotos.h  orkstd.h  orkstl.h  orktypes.h  orkwin32.h  pch.h  profiling.inl
ork.core/pyext/: CMakeLists.txt  pyext.cpp  pyext.h  pyext_asset.cpp  pyext_datablock.cpp  pyext_dataflow.cpp  pyext_math.cpp  pyext_math_frustum.cpp  pyext_math_la.inl  pyext_math_la_double.cpp  pyext_math_la_single.cpp  pyext_math_plane.cpp  pyext_reflection.cpp
ork.core/pyext/orkcore/: __init__.py
ork.core/pyext/pyfiles/: __orkengine_init__.py  setup.py
ork.core/pyext/tests/: crc.py  datablock.py  dataflow.py  math.py  math_eigenvalues.py  orkmath.py  reflection.py
ork.core/pyext/unittests/: crcstring.py  math_mtx3.py  math_mtx4.py  math_quat.py  math_vec2.py  math_vec3.py  math_vec4.py
ork.core/src/application/: application.cpp
ork.core/src/asset/: Asset.cpp  AssetCategory.cpp  AssetClass.cpp  AssetDependent.cpp  AssetLoader.cpp  AssetSet.cpp  AssetSetEntry.cpp  DynamicAssetLoader.cpp  FileAssetLoader.cpp  FileAssetNamer.cpp  VirtualAsset.cpp
ork.core/src/dataflow/: dataflow.cpp  dataflow_context.cpp  dataflow_ctx.cpp  dataflow_sorter.cpp  (+10 more)
ork.core/tests/: CMakeLists.txt  choiceman.cpp  cmatrix4.cpp  cquaternion.cpp  crcstring.cpp  cvector2.cpp  cvector3.cpp  cvector4.cpp  dataflow.cpp  dvariant.cpp  file.cpp  fixedstring.cpp  fsm.cpp  future.cpp  hdl.cpp  image.cpp  interface.cpp  main.cpp  math_misc.cpp  multi_buffer.cpp  netpacket_serdes.cpp  object.cpp  opq.cpp  parser.cpp  parser_1.cpp  parser_2.cpp  parser_3.cpp  parser_lang.inl  path.cpp  reflection.cpp  reflectionclasses.cpp  reflectionclasses.inl  ringbuffer.cpp  scrambler.cpp  serdes.cpp  serdes_array.cpp  serdes_asset.cpp  serdes_binary.cpp  serdes_enum.cpp  serdes_json.cpp  (+10 more)
ork.core/utils/: CMakeLists.txt
ork.ecs/: CMakeLists.txt
ork.ecs/examples/: CMakeLists.txt
ork.ecs/experiments/: CMakeLists.txt  main.cpp  mtest.ixx  ork.ixx  ork_corex.ihh  ork_corex.modulemap  stl.ixx
ork.ecs/pyext/: CMakeLists.txt  pyext.cpp  pyext.h  pyext_archetype.cpp  pyext_component.cpp  pyext_controller.cpp  pyext_datatable.cpp  pyext_entity.cpp  pyext_physics.cpp  pyext_pysys.cpp  pyext_scene.cpp  pyext_scenegraph.cpp  pyext_simulation.cpp  pyext_system.cpp
ork.ecs/pyext_sim/: CMakeLists.txt  pyext.cpp  pyext.h  pyext_component.cpp  pyext_datatable.cpp  pyext_ent.cpp  pyext_simulation.cpp  pyext_system.cpp
ork.ecs/tests/: CMakeLists.txt  datatable.cpp  ecstest.inl  ecstest_impl.cpp  lua_scripting.cpp  main.cpp  scene.cpp
ork.eda/: CMakeLists.txt
ork.eda/tests/: CMakeLists.txt  hdl.cpp  main.cpp  vcd.cpp
ork.ent/: CMakeLists.txt  makefile  ork.build.manifest  ork.ent.sconstruct
ork.ent/src/: AudioAnalyzer.cpp  AudioAnalyzerCA.cpp  AudioComponent.cpp  BulletForce.cpp  BulletHeightfield.cpp  BulletObject.cpp  BulletWorld.cpp  CharacterLocoComponent.cpp  CharacterLocoComponent.h  Compositor.cpp  CompositorComponent.cpp  CompositorMaterial.cpp  EditorCamera.cpp  EditorCamera.h  Fx3Compositor.cpp  GridComponent.cpp  GridComponent.h  HeightFieldDrawable.cpp  Lighting.cpp  LuaBindings.cpp  LuaBindings.h  ModParticleItem.cpp  ModelArchetype.cpp  ModelComponent.cpp  NodeCompositor.cpp  ObserverCamera.cpp  ObserverCamera.h  ParticleControllable.cpp  PerfController.cpp  PerformanceAnalyzer.cpp  PerformanceAnalyzer.h  ProcTex.cpp  ProcTex.h  QuartzComposerTest.h  QuartzComposerTest.mm  RacingLineData.cpp  ReferenceArchetype.cpp  ScriptComponent.cpd  ScriptComponent.cpp  SimpleAnimatable.cpp  (+33 more)
ork.ent/tests/: CMakeLists.txt  main.cpp  scene.cpp
ork.fcollada305/: CMakeLists.txt  makefile  ork.build.manifest  ork.fcollada305.sconstruct
ork.houdini/testrop/: CMakeLists.txt  build.py  rop_test.cpp  rop_test.h  rop_test.py
ork.lev2/: CMakeLists.txt  makefile  ork.build.manifest  ork.lev2.sconstruct
ork.lev2/examples/: CMakeLists.txt
ork.lev2/pyext/: CMakeLists.txt  pyext.cpp  pyext.h  pyext_compositor.cpp  pyext_ezapp.cpp  pyext_gfx.cpp  pyext_gfx_buffer.cpp  pyext_gfx_camera.cpp  pyext_gfx_compositor.cpp  pyext_gfx_drawables.cpp  pyext_gfx_material.cpp  pyext_gfx_model.cpp  pyext_gfx_particles.cpp  pyext_gfx_pbr.cpp  pyext_gfx_primitives.cpp  pyext_gfx_renderer.cpp  pyext_gfx_scenegraph.cpp  pyext_gfx_shader.cpp  pyext_gfx_vtxbuffer.cpp  pyext_meshutil.cpp  pyext_meshutil_component.cpp  pyext_meshutil_igl.cpp  pyext_meshutil_submesh.cpp  pyext_midi.cpp  pyext_primitives.cpp  pyext_qtez.cpp  pyext_scenegraph.cpp  pyext_ui.cpp  pyext_ui_ged.cpp  pyext_ui_layout.cpp
ork.lev2/src/: ezapp.cpp  ezapp_mainwin.cpp  ezapp_topwidget.cpp  lev2.cpp  lev2_asset.cpp  lev2_enums.cpp  lev2_init.cpp
ork.lev2/tests/: CMakeLists.txt  audio.cpp  gfxanim.cpp  glfx.cpp  main.cpp  meshutil.cpp  pbr.cpp
ork.lev2/unittests/: CMakeLists.txt  audio.cpp  ged_model.cpp  gfxanim.cpp  glfx.cpp  main.cpp  meshutil.cpp  particles.cpp  pbr.cpp  shadlang_test.cpp  skeleton.cpp  texturecompression.cpp  uianchor.cpp  uirect.cpp
ork.tool/: CMakeLists.txt  makefile  ork.tool.sconstruct
ork.tool/src/: EditorCamera.cpp  EditorCamera.h  SConscript  orktool_init.cpp  orktool_main.cpp  orktool_pch.cpp  orktool_toolmain.cpp
ork.toolmain/: CMakeLists.txt  main.cpp
ork.tuio/: CMakeLists.txt  ork.tuio.sconstruct
ork.tuio/src/: TuioClient.cpp  TuioClient.h  TuioServer.cpp
ork.utpp/: CMakeLists.txt
ork.utpp/src/: AssertException.h  Config.h  TestReporterStdout.cpp  TimeHelpers.h  XmlTestReporter.cpp
(+6113 files in other folders)
